Add Java14 (#298)
Signed-off-by: Jeff MAURY <jmaury@redhat.com>