@@ -887,6 +887,18 @@ hs_err_pid*.log</jgit.ignore>
 		</profile>
 
 		<profile>
+			<id>jdk14</id>
+			<activation>
+				<jdk>[14</jdk>
+			</activation>
+			<properties>
+				<jdeps-jdk-version>14</jdeps-jdk-version>
+				<jdeps-jdk-vendor>openjdk</jdeps-jdk-vendor>
+				<moduleProperties>--add-modules=ALL-SYSTEM</moduleProperties>
+			</properties>
+		</profile>
+
+		<profile>
 			<id>jdeps</id>
 			<build>
 				<plugins>
